fixed the footer icons on mobile screen

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -61,5 +61,7 @@
     display: flex;
     justify-content: center;
   }
-  
+  #footer {
+    flex-direction: column;
+  }
 }
